<resources>
    <string name="app_name">Cognex</string>
    <string name="imageview_content">ImageView default content description</string>
    <string name="main_header">Cognex Firmware Tool</string>
    <string name="select_device">Select device:</string>
    <string name="select_firmware">Select firmware:</string>
    <string name="download">Download</string>
    <string name="created_label">Created: </string>
    <string name="version_label">Version: </string>
    <string name="filetype_label">Filetype: </string>
    <string name="filename_label">File: </string>
    <string name="channel_label">Channel: </string>
    <string name="id_label">Id: </string>
    <string name="no_data">No data available. \nPlease check your internet connection.</string>

</resources>
